--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
             <artifactId>org.geoapi</artifactId>
             <version>1.0</version>
             <scope>system</scope>
-            <systemPath>/home/chinhvm/Documents/GSOC/GeoAPI/master/ide-project/NetBeans/dist/geoapi.jar</systemPath>
+            <systemPath>/home/haonguyen/Desktop/ProjectGsoc/GeoAPI/master/ide-project/NetBeans/dist/geoapi.jar</systemPath>
         </dependency>
         
         <dependency>
@@ -80,6 +80,17 @@
             <groupId>org.apache.sis.storage</groupId>
             <artifactId>sis-geotiff</artifactId>
             <version>0.8-jdk8-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.metro</groupId>
+            <artifactId>webservices-rt</artifactId>
+            <version>2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotoolkit</groupId>
+            <artifactId>feature</artifactId>
+            <version>4.0.0-MC0077</version>
+            <type>pom</type>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
