--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>hao.geotiff</groupId>
-    <artifactId>MavenWebProject</artifactId>
+    <groupId>org.apache.webvnsc</groupId>
+    <artifactId>webVNSC</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>WebVNSC</name>
+    <name>webVNSC</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -93,6 +93,12 @@
             <type>pom</type>
         </dependency>
         <dependency>
+            <groupId>org.glassfish.jersey.bundles</groupId>
+            <artifactId>jaxrs-ri</artifactId>
+            <version>2.16</version>
+            <type>zip</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
@@ -145,6 +151,7 @@
             <version>1.19</version>
         </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
