--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>4.0.2.RELEASE</spring.version>
     </properties>
-    
+
     <dependencies>
         <!--Geo-toolkit-->
         <dependency>
@@ -27,17 +27,15 @@
             <artifactId>geotk-temporal</artifactId>
             <version>4.0-SNAPSHOT</version>
         </dependency>
-        
+
         <!--SIS Depencies-->
         <!--Geo-API Depencies-->
         <dependency>
-            <groupId>geoapi</groupId>
-            <artifactId>org.geoapi</artifactId>
-            <version>1.0</version>
-            <scope>system</scope>
-            <systemPath>/home/haonguyen/Desktop/ProjectGsoc/GeoAPI/master/ide-project/NetBeans/dist/geoapi.jar</systemPath>
+          <groupId>org.opengis</groupId>
+          <artifactId>geoapi-pending</artifactId>
+          <version>4.0-SNAPSHOT</version>
         </dependency>
-        
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -57,7 +55,7 @@
             <artifactId>spring-web</artifactId>
             <version>${spring.version}</version>
         </dependency>
-        
+
         <!--Javax-->
         <dependency>
             <groupId>javax.measure</groupId>
@@ -89,10 +87,10 @@
         <dependency>
             <groupId>org.geotoolkit</groupId>
             <artifactId>feature</artifactId>
-            <version>4.0.0-MC0077</version>
+            <version>4.0-SNAPSHOT</version>
             <type>pom</type>
         </dependency>
-        
+
         <dependency>
             <groupId>javax.media</groupId>
             <artifactId>jai_core</artifactId>
@@ -104,7 +102,7 @@
             <artifactId>jai-imageio-jpeg2000</artifactId>
             <version>1.3.0</version>
         </dependency>
-        
+
         <dependency>
             <groupId>org.glassfish.jersey.bundles</groupId>
             <artifactId>jaxrs-ri</artifactId>
