--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,14 @@
             <param-name>com.sun.jersey.config.property.packages</param-name>
             <param-value>org.apache.VNSCweb</param-value>
         </init-param>
+        <init-param>
+        <param-name>com.sun.jersey.config.property.JSPTemplatesBasePath</param-name>
+        <param-value>/WEB-INF/jsp</param-value>
+    </init-param>
+    <init-param>
+        <param-name>com.sun.jersey.config.property.WebPageContentRegex</param-name>
+        <param-value>/(resources|(WEB-INF/jsp))/.*</param-value>
+    </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
