--- a/pom.xml
+++ b/pom.xml
@@ -84,12 +84,12 @@
             <artifactId>webservices-rt</artifactId>
             <version>2.3</version>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>org.geotoolkit</groupId>
             <artifactId>feature</artifactId>
             <version>4.0-SNAPSHOT</version>
             <type>pom</type>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>javax.media</groupId>
