--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
     <dependencies>
         <!--Geo-toolkit-->
-        <dependency>
+<!--        <dependency>
             <groupId>org.geotoolkit</groupId>
             <artifactId>geotk-utility</artifactId>
             <version>4.0-SNAPSHOT</version>
@@ -26,7 +26,7 @@
             <groupId>org.geotoolkit</groupId>
             <artifactId>geotk-temporal</artifactId>
             <version>4.0-SNAPSHOT</version>
-        </dependency>
+        </dependency>-->
 
         <!--SIS Depencies-->
         <!--Geo-API Depencies-->
@@ -91,50 +91,18 @@
             <type>pom</type>
         </dependency>-->
 
-        <dependency>
+       <dependency>
             <groupId>javax.media</groupId>
             <artifactId>jai_core</artifactId>
             <version>1.1.3</version>
             <type>pom</type>
         </dependency>
-        <dependency>
-            <groupId>com.github.jai-imageio</groupId>
-            <artifactId>jai-imageio-jpeg2000</artifactId>
-            <version>1.3.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.glassfish.jersey.bundles</groupId>
-            <artifactId>jaxrs-ri</artifactId>
-            <version>2.16</version>
-            <type>zip</type>
-        </dependency>
+        
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-            <version>7.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-compress</artifactId>
-            <version>1.10</version>
-        </dependency>
-        <dependency>
-            <groupId>com.esri.geometry</groupId>
-            <artifactId>esri-geometry-api</artifactId>
-            <version>1.2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>gov.nist.math</groupId>
-            <artifactId>jama</artifactId>
-            <version>1.0.3</version>
         </dependency>
         <dependency>
             <groupId>asm</groupId>
@@ -160,6 +128,21 @@
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-core</artifactId>
             <version>1.19</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.11</version>
+        </dependency>
+        <dependency>
+            <groupId>com.esri.geometry</groupId>
+            <artifactId>esri-geometry-api</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>gov.nist.math</groupId>
+            <artifactId>jama</artifactId>
+            <version>1.0.3</version>
         </dependency>
     </dependencies>
 
