--- a/src/main/resources/org/apache/sis/services/csw/config.properties
+++ b/src/main/resources/org/apache/sis/services/csw/config.properties
@@ -1,6 +1,6 @@
 #Path setttings
 #Thu Jul 07 14:42:59 ICT 2016
-Path=C:\\Users\\nguye\\Desktop\\projectGSOC\\data
+Path=E:\HOC HANH\GSOC\data
 PUBLISHER=VNSC-Vietnam National Satellite Center
 service=CSW
 version=2.0.2
